# tubby-bot

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
.git-crypt/keys/default/0/: 9BEB02D60A5C0CD7969C18EB29827C74090DD2D5.gpg
src/: cli.rs  config.rs  constants.rs  main.rs  utils.rs
src/engine/: dispatcher.rs  handlers.rs  mod.rs  trigger.rs
src/engine/handlers/: forward_announcements.rs  logging_handler.rs  mod.rs  waha_send_seen_handler.rs
src/signal/: actions.rs
src/signal/models/: group_entry.rs  link_preview.rs  mention.rs  mod.rs  send_message_request.rs  send_message_response.rs  typing_indicator_request.rs
src/waha/: actions.rs  client.rs  mod.rs  models.rs  utils.rs
src/waha/models/: media.rs  message_environment.rs  message_event.rs  message_me.rs  message_payload.rs  mod.rs  send_seen_request.rs  waha_event.rs
