[package]
name = "tubby-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
url = "2.5"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
